--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,12 @@ a:visited { color: #61C; }
 a:focus { outline: thin dotted; }
 a:hover, a:active { color: #c00; outline: 0; }
 
-b, strong { font-weight: bold; }
 pre, code { font-family: monospace, monospace; font-size: 1em; }
 ul, ol { margin: 1em 0; padding: 0 0 0 20px; }
 img { border: 0; max-width: 100%; }
 
 body { background: #fff; }
-header, footer, .container { max-width: 45em; margin: 0 auto; }
+.container { max-width: 45em; margin: 0 auto; }
 
 header { padding: 0 0.5em; color: #C90B0B; }
 header img { border-radius: 40px; float: left; }
@@ -32,7 +31,7 @@ header p span { font-size: 0.8em; font-weight: normal;}
 }
 
 .content { padding: 1em 1em; }
-.content li { list-style-type: none; font-size: 1.1em;}
+li { list-style-type: none; font-size: 1.1em;}
 li img { float:left; padding-right: 1em; }
 li p { font-size: 0.9em; font-style: italic; }
 
@@ -41,9 +40,3 @@ footer {
   border-top: 1px solid #ccc;
 }
 footer span { float: right; font-style: italic; }
-
-/* Smartphones (portrait) */
-@media only screen and (max-width: 480px) {
-  body { font-size: 12px;}
-  header p { padding-left: 4.5em;}
-}
